<resources>
    <string name="app_name">NutriPal</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_tracking_food">Tracking Food</string>
    <string name="title_profile">Profile</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="favorite_food">Favorite Food</string>
</resources>