<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.nutripal.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_profile"
            app:destination="@id/navigation_profile"
            app:launchSingleTop="true"
            app:popUpToInclusive="true"
            app:popUpTo="@id/navigation_home"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.nutripal.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
    </fragment>

    <fragment
        android:id="@+id/navigation_tracking_food"
        android:name="com.example.nutripal.ui.trackingfood.TrackingFoodFragment"
        android:label="@string/title_tracking_food"
        tools:layout="@layout/fragment_tracking_food" >
        <action
            android:id="@+id/action_navigation_tracking_food_to_navigation_search"
            app:destination="@id/navigation_search"
            app:launchSingleTop="true"
            app:popUpTo="@id/navigation_tracking_food"
            app:popUpToInclusive="true"
            >
            <argument
                android:name="makan"
                android:defaultValue=""
                app:argType="string"/>
        </action>



    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.nutripal.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.nutripal.ui.favorite.FavoriteFragment"
        android:label="Favorite Food"
        tools:layout="@layout/fragment_favorite"/>
</navigation>